# Absotui

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  hello_absotui.sh  known_bugs.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  install_issue.yml
.github/workflows/: release.yml
linux/: absotui.desktop
macos/: Info.plist  launch.command
src/: app.rs  config.rs  login_app.rs  main.rs
src/api/libraries/: get_all_books.rs  get_all_libraries.rs  get_library_perso_view.rs  get_library_perso_view_pod.rs
src/api/library_items/: get_audio_file_range.rs  get_cover.rs  get_pod_ep.rs  mod.rs  play_lib_item_or_pod.rs
src/api/me/: get_media_progress.rs  update_media_progress.rs
src/api/server/: auth_process.rs
src/api/sessions/: close_open_session.rs  sync_open_session.rs
src/api/utils/: collect_get_all_books.rs  collect_get_all_libraries.rs  collect_get_pod_ep.rs  collect_personalized_view.rs  collect_personalized_view_pod.rs
src/db/: crud.rs  database_struct.rs
src/logic/: mod.rs  server_recovery.rs  update_uninstall.rs
src/logic/auth/: auth_input.rs
src/logic/handle_input/: handle_l_book.rs  handle_l_pod.rs  handle_l_pod_home.rs
src/logic/search/: search_active.rs
src/ui/: login_tui.rs  player_tui.rs  tui.rs
src/utils/: changelog.rs  check_update.rs  clap.rs  convert_seconds.rs  cover_cache.rs  download_cache.rs  encrypt_token.rs  exit_app.rs  html_to_text.rs  logs.rs  mod.rs  pop_up_message.rs  scroll_wheel.rs  vlc_tcp_stream.rs
(+8 files in other folders)
