[package]
name = "absotui"
version = "0.4.2-beta"
edition = "2021"

[dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
config = "0.15.6"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
vlc-rc = "0.1.1"
tui-textarea = "0.7.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
regex = "1.11.1"
log = "0.4.25"
fern = "0.7.1"
chrono = "0.4.39"
magic-crypt = "4.0.1"
dotenv = "0.15.0"
dirs = "6.0.0"
clap = "4.5.37"
