[package]
name = "absotui"
version = "0.5.7-beta"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
config = "0.15.6"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.2"
vlc-rc = "0.1.1"
ratatui-textarea = "0.9.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
regex = "1.11.1"
log = "0.4.25"
fern = "0.7.1"
chrono = "0.4.39"
magic-crypt = "5.0.1"
dotenv = "0.15.0"
dirs = "6.0.0"
clap = "4.5.37"
ratatui-image = { version = "11.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
image = { version = "0.25.10", default-features = false, features = ["default-formats"] }
id3 = "1.17.0"
